# lxqt-panel

./: CMakeLists.txt
panel/: lxqtpanel.cpp
plugin-sysstat/: CMakeLists.txt  lxqtstatgrabbase.cpp  lxqtstatgrabbase.h  lxqtstatgrabcpu.cpp  lxqtstatgrabcpu.h  lxqtstatgrabmem.cpp  lxqtstatgrabmem.h  lxqtstatgrabnet.cpp  lxqtstatgrabnet.h  lxqtsysstat.cpp  lxqtsysstat.h  lxqtsysstatconfiguration.cpp  lxqtsysstatconfiguration.h
